DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[2.2.0 released - 8.14.2007]===================================================
Aug-09-2007 patrick     Stability improvements for vrj::OsgApp when using
                        multi-pipe/multi-threaded configurations.

[2.2 beta 1 released - 7.9.2007]===============================================
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 2.1.31
Jun-27-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for VJ_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and VJ_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 2.1.30
Jun-26-2007 patrick     Exposed VRJBasicDelegate so that user-level code can
                        derive from it to customize response to Cocoa events.
                        NEW VERSION: 2.1.29
May-14-2007 patrick     Finished making vrj::OpenSGApp work with both OpenSG
                        1.x and 2.0.
                        NEW VERSION: 2.1.28
May-11-2007 patrick     Made the data member of vrj::Frustum private and added
                        vrj::Frustum::getValues() as the accessor for that
                        data.
                        NEW VERSION: 2.1.27
May-04-2007 patrick     Improved OSG scene view lighting for subclasses of
                        vrj::OsgApp. Submitted by Doug McCorkle.
                        NEW VERSION: 2.1.26